--- a/src/scss/filejet-scss/styles.css
+++ b/src/scss/filejet-scss/styles.css
@@ -8867,7 +8867,9 @@ input[type=time]:active:before, .modal-header .btn-outline-dark:hover .icon-mail
 }
 
 /* rtl:begin:remove */
-.text-break, .userAccessTable .dataTables_wrapper td, .billing-dashboard .subsTable .dataTables_wrapper th:nth-child(3), .billing-dashboard .subsTable .dataTables_wrapper th:nth-child(4), .billing-dashboard .subsTable .dataTables_wrapper th:nth-child(7),
+.text-break, .userAccessTable .dataTables_wrapper td, .registeredAgentTableCard .dataTables_wrapper .dataTable tr th:first-child, .registeredAgentTableCard .dataTables_wrapper .dataTable tr th:nth-child(2),
+.registeredAgentTableCard .dataTables_wrapper .dataTable tr td:first-child,
+.registeredAgentTableCard .dataTables_wrapper .dataTable tr td:nth-child(2), .billing-dashboard .subsTable .dataTables_wrapper th:nth-child(3), .billing-dashboard .subsTable .dataTables_wrapper th:nth-child(4), .billing-dashboard .subsTable .dataTables_wrapper th:nth-child(7),
 .billing-dashboard .subsTable .dataTables_wrapper td:nth-child(3),
 .billing-dashboard .subsTable .dataTables_wrapper td:nth-child(4),
 .billing-dashboard .subsTable .dataTables_wrapper td:nth-child(7),
@@ -23440,21 +23442,46 @@ body *::-webkit-scrollbar-thumb {
 .registeredAgentTableCard .dataTable tbody tr:last-child td:last-child {
   border-bottom-right-radius: 5px;
 }
-.registeredAgentTableCard .sopNotificationTable .dataTables_wrapper .dataTable thead th:nth-child(n) {
-  min-width: 85px !important;
+.registeredAgentTableCard .dataTables_wrapper .dataTable tr th:first-child, .registeredAgentTableCard .dataTables_wrapper .dataTable tr th:nth-child(2),
+.registeredAgentTableCard .dataTables_wrapper .dataTable tr td:first-child,
+.registeredAgentTableCard .dataTables_wrapper .dataTable tr td:nth-child(2) {
+  min-width: 150px !important;
 }
-.registeredAgentTableCard .sopNotificationTable .dataTables_wrapper .dataTable thead th:first-child {
-  min-width: 110px !important;
+.registeredAgentTableCard .dataTables_wrapper .dataTable tr th:nth-child(3),
+.registeredAgentTableCard .dataTables_wrapper .dataTable tr td:nth-child(3) {
+  min-width: 95px !important;
 }
-.registeredAgentTableCard .sopNotificationTable .dataTables_wrapper .dataTable thead th:nth-child(1), .registeredAgentTableCard .sopNotificationTable .dataTables_wrapper .dataTable thead th:nth-child(2), .registeredAgentTableCard .sopNotificationTable .dataTables_wrapper .dataTable thead th:nth-child(3) {
-  max-width: 180px !important;
+.registeredAgentTableCard .dataTables_wrapper .dataTable tr th:nth-child(4),
+.registeredAgentTableCard .dataTables_wrapper .dataTable tr td:nth-child(4) {
+  min-width: 125px !important;
 }
-.registeredAgentTableCard .sopNotificationTable .dataTables_wrapper .dataTable thead th:last-child {
-  min-width: 100px !important;
+.registeredAgentTableCard .dataTables_wrapper .dataTable tr th:last-child,
+.registeredAgentTableCard .dataTables_wrapper .dataTable tr td:last-child {
+  min-width: 170px !important;
 }
-.registeredAgentTableCard .sopNotificationTable .dataTables_wrapper .dataTable tbody tr td:last-child div {
-  width: 100% !important;
-  max-width: 120px !important;
+.registeredAgentTableCard .sopNotificationTable .dataTables_wrapper .dataTable tr th:first-child, .registeredAgentTableCard .sopNotificationTable .dataTables_wrapper .dataTable tr th:nth-child(2),
+.registeredAgentTableCard .sopNotificationTable .dataTables_wrapper .dataTable tr td:first-child,
+.registeredAgentTableCard .sopNotificationTable .dataTables_wrapper .dataTable tr td:nth-child(2) {
+  min-width: 150px !important;
+}
+.registeredAgentTableCard .sopNotificationTable .dataTables_wrapper .dataTable tr th:nth-child(3),
+.registeredAgentTableCard .sopNotificationTable .dataTables_wrapper .dataTable tr td:nth-child(3) {
+  min-width: 75px !important;
+}
+.registeredAgentTableCard .sopNotificationTable .dataTables_wrapper .dataTable tr th:nth-child(5), .registeredAgentTableCard .sopNotificationTable .dataTables_wrapper .dataTable tr th:last-child,
+.registeredAgentTableCard .sopNotificationTable .dataTables_wrapper .dataTable tr td:nth-child(5),
+.registeredAgentTableCard .sopNotificationTable .dataTables_wrapper .dataTable tr td:last-child {
+  min-width: 130px !important;
+}
+.registeredAgentTableCard .sopNotificationTable .dataTables_wrapper .dataTable tr th:nth-child(4), .registeredAgentTableCard .sopNotificationTable .dataTables_wrapper .dataTable tr th:nth-child(6),
+.registeredAgentTableCard .sopNotificationTable .dataTables_wrapper .dataTable tr td:nth-child(4),
+.registeredAgentTableCard .sopNotificationTable .dataTables_wrapper .dataTable tr td:nth-child(6) {
+  min-width: 95px !important;
+}
+.registeredAgentTableCard .sopNotificationTable .dataTables_wrapper .dataTable tr th:nth-child(7), .registeredAgentTableCard .sopNotificationTable .dataTables_wrapper .dataTable tr th:nth-child(8),
+.registeredAgentTableCard .sopNotificationTable .dataTables_wrapper .dataTable tr td:nth-child(7),
+.registeredAgentTableCard .sopNotificationTable .dataTables_wrapper .dataTable tr td:nth-child(8) {
+  min-width: 105px !important;
 }
 .registeredAgentTableCard .dropdown .dropdown-toggle {
   display: flex;
